aws/eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 648824198004.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
